I forgot the build.xml

--- a/build.xml
+++ b/build.xml
@@ -90,7 +90,7 @@
                 </sourcefiles>
             </structure>
             <check>
-                <rule element="CLASS" excludes="package-info:*Constants*:*ExceptionsTest">
+                <rule element="CLASS" excludes="package-info:*Constants*:*ExceptionsTest:*view*">
                     <limit counter="INSTRUCTION" value="COVEREDRATIO" minimum="1.00"/>
                     <limit counter="CLASS" value="MISSEDCOUNT" maximum="0"/>
                 </rule>
