The buildscript had to be tampered with to get the logging to go to a file and not console

--- a/build.xml
+++ b/build.xml
@@ -54,6 +54,11 @@
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
+        <copy todir="${bin}">
+            <fileset dir="${src}">
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
     </target>
 
     <target name="compile" depends="init">
