Changed the buildscript in the res folder to test a Test.

--- a/res/build.xml
+++ b/res/build.xml
@@ -40,7 +40,7 @@
                 </fileset>
                 <pathelement path="./bin"/>
             </classpath>
-            <arg value="Hello"/>
+            <arg value="MyClass"/>
         </java>
     </target>
 </project>
