Fixed the tests from integerationTest.java, added a way for the TestTest.java to dynamically load the number of expected failures from the res folder, made the integrationTest class keep track of bad tests and save the number of bad tests.

--- a/res/build.xml
+++ b/res/build.xml
@@ -40,7 +40,7 @@
                 </fileset>
                 <pathelement path="./bin"/>
             </classpath>
-            <arg value="TestStudentSolutionSet1"/>
+            <arg value="AllTests"/>
         </java>
     </target>
 </project>
