condensed more code to make the SEXY look pop out more ;)

--- a/res/build.xml
+++ b/res/build.xml
@@ -40,7 +40,7 @@
                 </fileset>
                 <pathelement path="./bin"/>
             </classpath>
-            <arg value="MyClass"/>
+            <arg value="CLASSNAME"/>
         </java>
     </target>
 </project>
