--- a/build.xml
+++ b/build.xml
@@ -77,7 +77,7 @@
             <classpath refid="project.test.class.path"/>
             <formatter type="plain"/>
             <batchtest todir="${test.output}">
-                <fileset dir="${src}" includes="**/*Test.java"/>
+                <fileset dir="${src}" includes="**/*Test.java" excludes="**/IntegrationTest.java"/>
             </batchtest>
         </junit>
     </target>
@@ -88,7 +88,7 @@
                 <classpath refid="project.test.class.path"/>
                 <formatter type="plain"/>
                 <batchtest todir="${test.output}">
-                    <fileset dir="${src}" includes="**/*Test.java"/>
+                    <fileset dir="${src}" includes="**/*Test.java" excludes="**/IntegrationTest.java"/>
                 </batchtest>
             </junit>
         </jacoco:coverage>
@@ -105,7 +105,7 @@
                 </sourcefiles>
             </structure>
             <check>
-                <rule element="CLASS" excludes="package-info:*Constants*:*ExceptionsTest:*view*">
+                <rule element="CLASS" excludes="package-info:*Constants*:*ExceptionsTest:*view*:*IntegrationTest*">
                     <limit counter="INSTRUCTION" value="COVEREDRATIO" minimum="1.00"/>
                     <limit counter="CLASS" value="MISSEDCOUNT" maximum="0"/>
                 </rule>
